# gematria38

./: pyproject.toml
gematria38/: date_time.py  mappings.py  primes.py
