[tool.poetry]
name = "gematria38"
version = "0.1.0"
description = ""
authors = ["Terrence Brannon <metaperl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
plac = "^1.3.3"
loguru = "^0.5.3"
arrow = "^1.0.3"
dateparser = "^1.0.0"
primelib = "^1.0.0"
NumberSequences = "^0.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
